--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=5002
 MONGO_URI=mongodb+srv://abdakalakhras:SyrisMongo1234@cluster0.ufmfk4q.mongodb.net/store
+JWT_SECRET = secretxyz123@852useanySecreat!
